data/derived/fa15/progs/unify/prog1622.ml.out
Characters 76-77:
  if n>=10 then let n = digitsOfInt n and f= sumList n in digitalRoot n
                                                     ^
Error: This expression has type int but an expression was expected of type
         int list
